--- a/DontAnnoyTheSquare/app/src/main/res/layout/activity_main.xml
+++ b/DontAnnoyTheSquare/app/src/main/res/layout/activity_main.xml
@@ -31,14 +31,15 @@
         android:layout_height="wrap_content"
         android:src="@drawable/whitesquare"
         android:layout_centerInParent="true"/>
+
     <ImageView
         android:id="@+id/ivRedOval"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/redoval"
         android:layout_alignParentBottom="true"
+        android:layout_marginLeft="50dp"
         android:layout_marginBottom="50dp"
-        android:layout_marginLeft="50dp" />
+        android:src="@drawable/redoval" />
     <ImageView
         android:id="@+id/ivBlueOval"
         android:layout_width="wrap_content"
