--- a/BroadcastRecieverExample/app/src/main/res/layout/activity_main.xml
+++ b/BroadcastRecieverExample/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,35 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/tvOutput"
+        android:id="@+id/tvHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:textColor="@color/black"
-        android:text="Today's Weather:"
-        android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:text="Today's Weather:"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/ivCurrentWeather"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_below="@id/tvHeadline"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/sunny" />
+
+    <TextView
+        android:id="@+id/tvCurrentWeather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ivCurrentWeather"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="Sunny"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
