--- a/Task7/app/src/main/res/layout/activity_main.xml
+++ b/Task7/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/MainLayout">
 
-    <TextView
+    <ImageView
+        android:id="@+id/ivPlus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/plus"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"/>
+
+
 
 </LinearLayout>
