--- a/WorkerManagerExample/app/src/main/res/layout/activity_main.xml
+++ b/WorkerManagerExample/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,18 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"/>
 
+    <TextView
+        android:id="@+id/tvSwitchActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textColor="@color/black"
+        android:layout_below="@id/cbRepetitive"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="Switch Activity"
+        android:clickable="true"/>
+
 
 
 </RelativeLayout>
