--- a/GPSExample/app/src/main/res/layout/activity_main.xml
+++ b/GPSExample/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,11 @@
         android:layout_marginTop="50dp"
         android:text="Longitude: \nLatitude:"/>
 
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map"
+        android:layout_below="@id/tvData"
+        android:layout_marginTop="10dp"
+        android:layout_width="500dp"
+        android:layout_height="300dp"/>
+
 </RelativeLayout>
