--- a/FallBall/app/src/main/res/values/colors.xml
+++ b/FallBall/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="yellow">#f2e900</color>
+    <color name="dark_yellow">#f5b000</color>
+    <color name="red">#be1800</color>
+    <color name="dark_red">#711100</color>
+    <color name="inner_blue">#deb501</color>
+    <color name="mid_blue">#2388d2</color>
+    <color name="outer_blue">#9de3f3</color>
+
 </resources>
