--- a/FallBall/app/src/main/res/layout/activity_main.xml
+++ b/FallBall/app/src/main/res/layout/activity_main.xml
@@ -50,22 +50,19 @@
                 android:id="@+id/heart1"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:layout_marginLeft="5dp"
-                android:src="@drawable/big_heart"/>
+                android:layout_marginLeft="5dp" />
 
             <ImageView
                 android:id="@+id/heart2"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:layout_marginLeft="5dp"
-                android:src="@drawable/big_heart"/>
+                android:layout_marginLeft="5dp" />
 
             <ImageView
                 android:id="@+id/heart3"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:layout_marginLeft="5dp"
-                android:src="@drawable/big_heart"/>
+                android:layout_marginLeft="5dp" />
 
         </LinearLayout>
 
