Refactored & cleaned up

--- a/FinalProject/app/src/main/res/layout/activity_home_screen.xml
+++ b/FinalProject/app/src/main/res/layout/activity_home_screen.xml
@@ -50,11 +50,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-<<<<<<< HEAD
-        android:background="@drawable/ic_copyright"
-=======
-        android:background="@drawable/c1"
->>>>>>> origin/master
+        android:src="@drawable/ic_copyright"
         android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
